--- a/www/index.html
+++ b/www/index.html
@@ -13,47 +13,138 @@
 </head>
 <body>
 	<div class="Landing">
-		<div class="Landing__header"></div>
+		<div class="Landing__header">
+			
+			<div class="Header__section">
+				<div class="Header__menu">
+					<div class="Menu__logotype">
+						<img src="./public/images/logotype_white.png"/>
+					</div>
+					<div class="Menu__list" >
+						<a class="Menu__link">
+							Информация
+						</a>
+						<a class="Menu__link">
+							Список
+						</a>
+						<a class="Menu__link">
+							Форма
+						</a>
+						<a class="Menu__link">
+							Карта
+						</a>
+					</div>
+				</div>
+
+				<div class="Header__content">
+					<div class="Content__info">
+						<div class="Content__text">
+							Основной текст на фоне
+						</div>
+						<div class="Content__button">
+							<a class="Button">
+								Кнопка
+							</a>
+						</div>
+					</div>
+					<div class="Content__image">
+						<img src="./public/images/image.png"/>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
 		<div class="Landing__content">
 			<div class="Content__section">
-				<div class="Section_title">Информация</div>
-				<div class="Section_text">Очень большой текст содержащий полезную информацию</div>
+				<div class="Section__title">
+					Информация
+				</div>
+				<div class="Section__text">
+					Очень большой текст содержащий полезную информацию.
+				</div>
 			</div>
 			<div class="Content__section">
-				<div class="Section_title">Список</div>
-				<div class="Section_lists">
+				<div class="Section__title">
+					Список
+				</div>
+				<div class="Section__lists">
 					<div class="List__block">
 						<div class="List__image">
-							<img class="Image" src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png" width="203" height="203">
+							<img src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png">
 						</div>
-						<div class="List__title">Элемент 1</div>
-						<div class="List__info">Описание</div>
+						<div class="List__title">
+						Элемент 1
+						</div>
+						<div class="List__info">
+						Описание
+						</div>
 					</div>
+
 					<div class="List__block">
 						<div class="List__image">
-							<img class="Image" src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png" width="203" height="203">
+							<img src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png">
 						</div>
-						<div class="List__title">Элемент 2</div>
-						<div class="List__info">Описание</div>
+						<div class="List__title">
+						Элемент 2
+						</div>
+						<div class="List__info">
+						Описание
+						</div>
 					</div>
+
 					<div class="List__block">
 						<div class="List__image">
-							<img class="Image" src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png" width="203" height="203">
+							<img src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png">
 						</div>
-						<div class="List__title">Элемент 3</div>
-						<div class="List__info">Описание</div>
+						<div class="List__title">
+						Элемент 3
+						</div>
+						<div class="List__info">
+						Описание
+						</div>
 					</div>
+
 					<div class="List__block List__block_end">
 						<div class="List__image">
-							<img class="Image" src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png" width="203" height="203">
+							<img src="./public/images/6e5742a8e74a6fcfaa219851db175864cfab73e3.png">
 						</div>
-						<div class="List__title">Элемент 4</div>
-						<div class="List__info">Описание</div>
+						<div class="List__title">
+						Элемент 4
+						</div>
+						<div class="List__info">
+						Описание
+						</div>
 					</div>
-				<div>
+				</div>
 			</div>
 		</div>
-		<div class="Landing__footer"></div>
+		<div class="Landing__footer">
+			
+			<div class="Header__section">
+				<div class="Header__menu">
+					<div class="Menu__logotype">
+						<img src="./public/images/logotype_white.png"/>
+					</div>
+					<div class="Menu__list" >
+						<a class="Menu__link">
+							Информация
+						</a>
+						<a class="Menu__link">
+							Список
+						</a>
+						<a class="Menu__link">
+							Форма
+						</a>
+						<a class="Menu__link">
+							Карта
+						</a>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
 	</div>
 </body>
 </html>
